--- a/templates/base.html
+++ b/templates/base.html
@@ -186,6 +186,11 @@
                             <i class="fas fa-comments me-1"></i>Chat
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('courses') }}">
+                            <i class="fas fa-graduation-cap me-1"></i>Meine Kurse
+                        </a>
+                    </li>
                     {% if session.role == 'admin' %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('admin_panel') }}">
