--- a/templates/chat_simple.html
+++ b/templates/chat_simple.html
@@ -63,6 +63,11 @@
                         <span class="navbar-brand">
                             <i class="fas fa-robot me-2"></i>Kiki Chat - KI-Kursstudio
                         </span>
+                        <div class="navbar-nav">
+                            <a class="nav-link" href="/courses">
+                                <i class="fas fa-book me-1"></i>Meine Kurse
+                            </a>
+                        </div>
                         <span class="navbar-text">
                             Session: {{ session_id }}
                         </span>
